Fix T65806: Can't Access bpy.context inside Application Timer

Sound synchronization was messing a bit with the context, for, actually,
no reason.

Use more direct queries rather than relying on a context there.